Add strings and preliminary toggle
WIP:Preferences

Break PrefsFragment to own file
(WIP)Dynamically Load PrefsFragment class
Add support libraries

Refactor in Shared Preferences
Remove MainActivity/Move to a single PreferenceActivity

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,7 +19,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     android:versionCode="1"
     android:versionName="1.0" >
 
+    <uses-permission android:name="android.permission.CHANGE_CONFIGURATION"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
+    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
 
     <uses-sdk
         android:minSdkVersion="24"
@@ -27,16 +31,25 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
     <application
         android:allowBackup="false"
-        android:label="Welcome Back"
+        android:label="@string/app_label"
         android:requiredForAllUsers="true"
         android:hardwareAccelerated="true">
 
         <receiver android:name=".WBReceiver"
-               android:label="Welcome Back" >
+               android:label="@string/app_label" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-
+        <activity android:name=".PrefsFragment"
+            android:label="@string/app_label"
+            android:icon="@drawable/ic_status_bar_deso_logo"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
